# linguistic-tax

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  experiment_config.json  pyproject.toml
.claude/: gsd-file-manifest.json  settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
data/: default_models.json  emphasis_matrix_a.json  emphasis_matrix_b.json  emphasis_matrix_c.json  pilot_prompts.json  prompts.json
docs/: RDD_Linguistic_Tax_v4.md  README.md  analysis-guide.md  architecture.md  blog-post-draft.md  contributing.md  getting-started.md  gsd_project_description.md  prompt_format_research.md
scripts/: curate_prompts.py  generate_emphasis_cluster_a.py  generate_emphasis_clusters_bc.py  generate_matrix.py  qa_script.sh
src/: analyze_results.py  api_client.py  cli.py  compute_derived.py  config.py  config_commands.py  config_manager.py  db.py  emphasis_converter.py  env_manager.py  execution_summary.py  generate_figures.py  grade_results.py  matrix_generator.py  model_discovery.py  model_registry.py  noise_generator.py  pilot.py  prompt_compressor.py  prompt_repeater.py  run_experiment.py  session.py  setup_wizard.py
tests/: conftest.py  test_analyze_results.py  test_api_client.py  test_cli.py  test_compute_derived.py  test_config.py  test_config_commands.py  test_config_manager.py  test_db.py  test_emphasis_clusters_bc.py  test_emphasis_converter.py  test_env_manager.py  test_execution_summary.py  test_generate_figures.py  test_grade_results.py  test_integration.py  test_matrix.py  test_matrix_generator.py  (+10 more)
(+408 files in other folders)
